Fixed Scrollbar on Chromium

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,12 +2,32 @@
 @tailwind components;
 @tailwind utilities;
 
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #bbb;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #888;
+}
+
+html {
+  overflow-y: overlay;
+}
+
 :root {
 }
 
 .triangle {
   border-style: solid; 
-  border-width: 0px 0px 90px 90px; 
+  border-width: 0px 0px 6rem 6rem; 
   border-color: transparent transparent transparent #6b7280;
 }
 
